--- a/app/src/main/res/drawable/gradient_blue_to_transparent.xml
+++ b/app/src/main/res/drawable/gradient_blue_to_transparent.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:endColor="#00000000"
-        android:startColor="#050505" />
+        android:endColor="#000B5AAB"
+        android:startColor="#0B5AAB" />
 </shape>
