--- a/app/src/main/res/layout/activity_create_headline.xml
+++ b/app/src/main/res/layout/activity_create_headline.xml
@@ -70,23 +70,16 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ViewStub
+        android:id="@+id/viewStub"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout="@layout/view_template_landscape_cnn"
         app:layout_constraintBottom_toTopOf="@+id/btnPreview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topView">
-
-        <ViewStub
-            android:id="@+id/viewStub"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout="@layout/view_template_landscape_cnn"
-            android:visibility="visible" />
-
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/topView"
+        android:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnPreview"
